[package]
name = "centipede"
version = "0.2.12"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
serde = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx.git" }
serde_derive = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx.git" }
#rayon = "1.0.3"
#curv = { package = "curv-kzen", version = "0.7", default-features = false }
curv = { git = "https://github.com/Polkadex-Substrate/curv.git", branch="sgx-enabled" }

[dependencies.bulletproof]
git = "https://github.com/Polkadex-Substrate/bulletproofs"
#tag = "v1.1.6"
default-features = false
branch = "sgx-enabled"

#[dev-dependencies]
#criterion = "0.2"

[features]
default = ["curv/rust-gmp-kzen"]

#[[bench]]
#name = "v_backup"
#path = "benches/v_backup.rs"
#harness = false
